Fix font size on mobile-sized screens

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -161,7 +161,7 @@ footer
 
 // PROJECT PAGE
 #project-page, #about-page
-  h1
+  h1#title
     display: block
     font-size: 2em
     margin: 0.8em auto
@@ -187,6 +187,13 @@ footer
     display: block
     margin: auto
     max-width: 800px
+
+    h1:not(#title)
+      font-size: 1.7em
+      margin-bottom: 1em
+
+      &:not(:first-child)
+        margin-top: 1.7em
 
     video, img
       display: block
