--- a/assets/sass/small.sass
+++ b/assets/sass/small.sass
@@ -1,7 +1,7 @@
 // MOBILE
 @media only screen and (max-width: 600px)
   html, body
-    font-size: 14px
+    font-size: 16px
 
   // NAVBAR
   #navbar #navbar-content #site-title
